--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                      I'll just tell my normal, believable story, and here it is:
 
                      Borned in a regular, loving and caring family, second of three children. Both of my parents were teachers, chemistry teachers so education was kind of strict.
-                     Also, my two brothers and I were kind of good friends
+                     Also, my two brothers and I were kind of good friends, 
                 </article>
 
                 <article>
