--- a/index.html
+++ b/index.html
@@ -128,8 +128,9 @@
                                     <h4 class="text-secondary text-center text-uppercase">Plans for the future</h4>
                                     <p style= "margin-top: 30px; text-align: justify">Well, right now it's hard to share my plans, one because my life has changed a lot since last October and my plans are changing too. And two, because if I share while 
                                     I'm making those plans come true and they are in their first stages, they might not become a solid reality so, for now I'll just say this:</p>
-                                    <p style= "margin-top: 10px; text-align: justify">In six years or less I'll be creating 3D models for videos and/or video games, I won't work for a need of money but for the pleasure of it and I will have small businesses 
-                                    to fill my monetary needs.</p>
+                                    <ul id="thingsToDo">
+                                    </ul>
+                                    <p style= "margin-top: 10px; text-align: justify"> </p>
                                 </article>
                             </main>
                         </section>
@@ -137,7 +138,8 @@
                 </div>
               </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src='scripts.js'></script>
 </body>
 </html>
