Toques se Javascript a pagina

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                                     <a href="" class="text-white mt-2" data-toggle="collapse" data-target="#RedCross" aria-expanded="false" aria-controls="RedCross">Red Cross</a>
                                     <a href="" class="text-white mt-2" data-toggle="collapse" data-target="#Food" aria-expanded="false" aria-controls="Food">Food</a>
                                     <a href="" class="text-white mt-2" data-toggle="collapse" data-target="#PlansForTheFuture" aria-expanded="false" aria-controls="PlansForTheFuture">Plans for the future</a>
+                                    <a href="" class="text-white mt-2" data-toggle="collapse" data-target="#MyCrazyMusic" aria-expanded="false" aria-controls="MyCrazyMusic">My crazy music</a>
                                 </nav>
                             </section>
                   </div>
@@ -130,7 +131,18 @@
                                     I'm making those plans come true and they are in their first stages, they might not become a solid reality so, for now I'll just say this:</p>
                                     <ul id="thingsToDo">
                                     </ul>
-                                    <p style= "margin-top: 10px; text-align: justify"> </p>
+                                </article>
+                                <article class="shadow-sm p-3 mb-5 bg-white rounded collapse" id="MyCrazyMusic" data-parent="#accordion">
+                                    <h4 class="text-secondary text-center text-uppercase">My crazy music (Just a taste)</h4>
+                                    <div class="embed-responsive embed-responsive-16by9" style= "margin-top: 20px">
+                                        <iframe id="Music" class="embed-responsive-item" src="https://www.youtube.com/embed/Fq-KORMeNBE"></iframe>
+                                      </div>
+                                      <div>
+                                      <div>
+                                        <button id="prev" type="button" class="col-sm-4 btn btn-primary"style= "margin-left: 40px">Prev</button>
+                                        <button id="info" type="button" class="col-sm-3 btn btn-light">List 1 of 7</button>
+                                        <button id="next" type="button" class="col-sm-4 btn btn-primary">Next</button>
+                                      </div>
                                 </article>
                             </main>
                         </section>
